6.33
    Doc Improvements
    - Typo fixes.  $(TOUNIX) -> $(TO_UNIX).  [rt.cpan.org 23495]

6.32  Wed Feb 21 07:59:57 PST 2007
    New Features
    - WriteEmptyMakefile() is now exportable upon request.
    
    Bug Fixes
    - Set binmode() when writing to files in Command.t for operating
      systems which need that sort of thing.  [bleadperl #29578]
    - Fixed a minor duplication in manifypod_target().  [rt.cpan.org 22149]

    Test Fixes
    - The build_man.t test would fail if your Perl is configured to not
      generate man pages ($Config{installman3dir} is set to none).

    Doc Improvements
    - Made the home dir install examples a little more friendly to non-Unix
      folks.

    Misc
    - miniperl no longer has the Win32 functions.
    - Turn on "use strict" where it was missing.

6.31  Mon Oct  9 16:54:47 PDT 2006
    - Update our META.yml to version 1.2 of the spec.
    * Update the SEE ALSO to mention Module::Build, Module::Install,
      ExtUtils::ModuleMaker and Module::Starter.
    - Fix ARCHITECTURE tag in PPD generation for 5.8 (patch taken from
      ActiveState 819). [rt.cpan.org 20566]
    * Bring ExtUtils::Manifest up to 1.48

6.30_04  Mon Sep 11 16:14:06 EDT 2006
    - EXTRA_META has been undocumented as I don't like the way the
      interface works but I don't want to hold up 6.31.  It will be
      replaced with something better next version.
    - Added explaination of distclean behavior and instructions on how to
      blow away anything not in the MANIFEST to the FAQ.
    * 6.30_01 broke overrides of PM.  MakeMaker would add to a user
      suplied PM rather than simply accepting it.
    * Document INSTALL_BASE.
    * Added "How do I install a module into my home directory?" to the FAQ
    * Added "How do I get MakeMaker and Module::Build to install to the
      same place?"
    - Moving ExtUtils::Mksymlists and ExtUtils::Mkbootstrap back into
      lib/ because no independent distribution has taken them over.
